--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="./script.js" defer></script>
   </head>
   <body>
-    <div class="gridContainer"></div>
+    <button id="changeGrid">Select the number of squares per side for the grid</button>
+    <div id="gridContainer"></div>
   </body>
 </html>
