Optimize and clean up the code

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <button id="changeGrid">Select the number of squares per side for the grid</button>
-    <div id="gridContainer"></div>
+    <div id="grid"></div>
   </body>
 </html>
