Add buttons to set a color mode
- The currentMode variable by default is black mode.
- The setMode function is called which applies the click event to each square, and the applied color mode depends on the currentMode variable (by default black mode is applied).
- The setMode buttons change the string of the currentMode variable and call the setMode function to apply the change.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <script src="./script.js" defer></script>
   </head>
   <body>
-    <button id="changeGrid">Select the number of squares per side for the grid</button>
+    <div id="options">
+      <button id="changeGrid">Change grid</button>
+      <button class="setMode" id="setBlackMode">Set Black mode</button>
+      <button class="setMode" id="setBlueMode">Set Blue mode</button>
+    </div>
     <div id="grid"></div>
   </body>
 </html>
