Add button to erase the grid

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <button id="changeGrid">Change grid</button>
       <button class="setMode" id="setBlackMode">Set Black mode</button>
       <button class="setMode" id="setBlueMode">Set Blue mode</button>
+      <button id="eraseGrid">Erase</button>
     </div>
     <div id="grid"></div>
   </body>
