Add a color picker
- Replaced the buttons that applied a specific color with a color selector.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div id="options">
-      <button id="changeGrid">Change grid</button>
-      <button class="setMode" id="setBlackMode">Set Black mode</button>
-      <button class="setMode" id="setBlueMode">Set Blue mode</button>
+      <label for="colorPicker">Color Picker:</label>
+      <input id="colorPicker" type="color" value="#000000">
       <button id="eraseGrid">Erase</button>
+      <button id="changeGrid">Change grid</button>
     </div>
     <div id="grid"></div>
   </body>
