--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <option value="#ff00ff"></option>
         <option value="#ff007f"></option>
       </datalist>
+      <button id="modeColorPicker">Set Color Picker mode</button>
+      <button id="modeRandomColor">Set Random Color mode</button>
       <button id="eraseGrid">Erase</button>
       <button id="changeGrid">Change grid</button>
     </div>
