--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       </datalist>
       <button id="modeColorPicker">Set Color Picker mode</button>
       <button id="modeRandomColor">Set Random Color mode</button>
+      <button id="modeDarkeningEffect">Set Darkening effect mode</button>
       <button id="eraseGrid">Erase</button>
       <button id="changeGrid">Change grid</button>
     </div>
