--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <button id="modeRandomColor">Set Random Color mode</button>
       <button id="modeDarkeningEffect">Set Darkening effect mode</button>
       <button id="eraseGrid">Erase</button>
+      <!-- Grid Size -->
       <label for="changeGrid">Grid size</label>
       <input id="changeGrid" type="range" min="1" value="16" list="gridSizeMarkers">
       <datalist id="gridSizeMarkers">
@@ -41,6 +42,10 @@
         <option value="80"></option>
       </datalist>
       <div id="showGridSize">16 x 16</div>
+      <!-- Grid Mesh -->
+      <label for="gridMeshOpacity">Grid mesh opacity</label>
+      <input id="gridMeshOpacity" type="range" value="5">
+      <div id="showGridMeshOpacity">0.05</div>
     </div>
     <div id="grid"></div>
   </body>
