--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <button id="modeColorPicker">Set Color Picker mode</button>
       <button id="modeRandomColor">Set Random Color mode</button>
       <button id="modeDarkeningEffect">Set Darkening effect mode</button>
+      <button id="modeBrighteningEffect">Set Brightening Effect mode</button>
       <button id="eraseGrid">Erase</button>
       <!-- Grid Size -->
       <label for="changeGrid">Grid size</label>
