--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="options">
+      <!-- Color Picker -->
       <label for="colorPicker">Color Picker:</label>
       <input id="colorPicker" type="color" value="#000000">
       <div id="colorPaletteContainer">
@@ -27,6 +28,7 @@
         <input class="paletteColor" type="button" value="#ff00ff"></input>
         <input class="paletteColor" type="button" value="#ff007f"></input>
       </div>
+      <!-- Buttons -->
       <button id="modeColorPicker">Set Color Picker mode</button>
       <button id="modeRandomColor">Set Random Color mode</button>
       <button id="modeDarkeningEffect">Set Darkening effect mode</button>
@@ -42,11 +44,11 @@
         <option value="64"></option>
         <option value="80"></option>
       </datalist>
-      <div id="showGridSize">16 x 16</div>
+      <output for="changeGrid">16 x 16</output>
       <!-- Grid Mesh -->
       <label for="gridMeshOpacity">Grid mesh opacity</label>
       <input id="gridMeshOpacity" type="range" value="5">
-      <div id="showGridMeshOpacity">0.05</div>
+      <output for="gridMeshOpacity">0.05</output>
     </div>
     <div id="grid"></div>
   </body>
