--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Etch A Sketch</title>
-    <link rel="stylesheet" href="./styles.css">
-    <script src="./script.js" defer></script>
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <title>Etch A Sketch</title>
+  <link rel="stylesheet" href="./styles.css">
+  <script src="./script.js" defer></script>
+</head>
+<body>
+  <div id="header">Etch a Sketch</div>
+  <div id="main">
     <div id="options">
       <!-- Color Picker -->
       <label for="colorPicker">Color Picker:</label>
@@ -51,5 +53,7 @@
       <output for="gridMeshOpacity">0.05</output>
     </div>
     <div id="grid"></div>
-  </body>
+  </div>
+  <div id="footer">Made by EHXSmallStone</div>
+</body>
 </html>
