Add styles to colorPicker

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div id="main">
     <div id="options">
       <!-- Color Picker -->
-      <label for="colorPicker">Color Picker:</label>
+      <label for="colorPicker">Color Picker</label>
       <input id="colorPicker" type="color" value="#000000">
       <div id="colorPaletteContainer">
         <input class="paletteColor" type="button" value="#000000"></input>
