Change HTML, CSS and JS to the set mode buttons

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       </div>
       <div id="buttonsContainer">
         <!-- Buttons -->
-        <button id="modeColorPicker">Set Color Picker mode</button>
-        <button id="modeRandomColor">Set Random Color mode</button>
-        <button id="modeDarkeningEffect">Set Darkening effect mode</button>
-        <button id="modeBrighteningEffect">Set Brightening Effect mode</button>
+        <button class="setModeButton" value="colorPicker">Set Color Picker mode</button>
+        <button class="setModeButton" value="randomColor">Set Random Color mode</button>
+        <button class="setModeButton" value="darkeningEffect">Set Darkening effect mode</button>
+        <button class="setModeButton" value="brighteningEffect">Set Brightening Effect mode</button>
         <button id="eraseGrid">Erase</button>
         <!-- Grid Size -->
         <label for="changeGrid">Grid size</label>
