Fix Uncaught TypeError error on eraseGrid

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <button class="setModeButton" value="randomColor">Set Random Color mode</button>
         <button class="setModeButton" value="darkeningEffect">Set Darkening effect mode</button>
         <button class="setModeButton" value="brighteningEffect">Set Brightening Effect mode</button>
-        <button id="eraseGrid">Erase</button>
+        <button id="eraseGrid">Erase All</button>
         <!-- Grid Size -->
         <label for="changeGrid">Grid size</label>
         <input id="changeGrid" type="range" min="1" value="16" list="gridSizeMarkers">
