--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Etch A Sketch</title>
   <link rel="stylesheet" href="./styles.css">
-  <script src="./script.js" defer></script>
+  <script src="./script.js" type="module" defer></script>
 </head>
 <body>
   <div id="header">Etch a Sketch</div>
@@ -40,7 +40,7 @@
         <button id="eraseGrid">Erase All</button>
         <!-- Grid Size -->
         <label for="changeGrid">Grid size</label>
-        <input id="changeGrid" type="range" min="1" value="16" list="gridSizeMarkers">
+        <input id="changeGrid" type="range" min="1" value="32" list="gridSizeMarkers">
         <datalist id="gridSizeMarkers">
           <option value="16"></option>
           <option value="32"></option>
@@ -48,7 +48,7 @@
           <option value="64"></option>
           <option value="80"></option>
         </datalist>
-        <output for="changeGrid">16 x 16</output>
+        <output for="changeGrid">32 x 32</output>
         <!-- Grid Mesh -->
         <label for="gridMeshOpacity">Grid mesh opacity</label>
         <input id="gridMeshOpacity" type="range" value="5">
