Add Paint Bucket Tool

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <button class="setModeButton" value="darkeningEffect">Set Darkening effect mode</button>
         <button class="setModeButton" value="brighteningEffect">Set Brightening Effect mode</button>
         <button id="eraseGrid">Erase All</button>
+        <button id="paintBucketTool">Paint Bucket Tool</button>
         <!-- Grid Size -->
         <label for="changeGrid">Grid size</label>
         <input id="changeGrid" type="range" min="1" value="32" list="gridSizeMarkers">
