--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Etch A Sketch</title>
   <link rel="stylesheet" href="./styles.css">
-  <script src="./script.js" type="module" defer></script>
+  <script src="./script.js" defer></script>
 </head>
 <body>
   <div id="header">Etch a Sketch</div>
