Change the function insertDraw. Adapt the drawing to any size

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <button id="paintBucketTool">Paint Bucket Tool</button>
         <!-- Grid Size -->
         <label for="changeGrid">Grid size</label>
-        <input id="changeGrid" type="range" min="1" value="32" list="gridSizeMarkers">
+        <input id="changeGrid" type="range" min="1" list="gridSizeMarkers">
         <datalist id="gridSizeMarkers">
           <option value="16"></option>
           <option value="32"></option>
@@ -49,7 +49,7 @@
           <option value="64"></option>
           <option value="80"></option>
         </datalist>
-        <output for="changeGrid">32 x 32</output>
+        <output for="changeGrid"></output>
         <!-- Grid Mesh -->
         <label for="gridMeshOpacity">Grid mesh opacity</label>
         <input id="gridMeshOpacity" type="range" value="5">
