--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>Etch A Sketch</title>
   <link rel="stylesheet" href="./styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <script src="./script.js" defer></script>
 </head>
 <body>
@@ -62,6 +65,9 @@
     </div>
     <div id="grid"></div>
   </div>
-  <div id="footer">Made by EHXSmallStone</div>
+  <div id="footer">
+    Made by <a href="https://github.com/EHXSmallStone" target="_blank">EHXSmallStone</a> |
+    <a href="https://github.com/EHXSmallStone/odin-etch-a-sketch" target="_blank">Source code</a>
+  </div>
 </body>
 </html>
