Stylize range sliders

--- a/index.html
+++ b/index.html
@@ -45,14 +45,7 @@
         <!-- Grid Size -->
         <div class="inputRangeContainer">
           <label for="changeGrid">Grid size</label>
-          <input id="changeGrid" type="range" min="1" list="gridSizeMarkers">
-          <datalist id="gridSizeMarkers">
-            <option value="16"></option>
-            <option value="32"></option>
-            <option value="48"></option>
-            <option value="64"></option>
-            <option value="80"></option>
-          </datalist>
+          <input id="changeGrid" type="range" min="1">
           <output for="changeGrid"></output>
         </div>
         <!-- Grid Mesh -->
