Add input to change background color of grid.
- Now each square is transparent
- Disable paint bucket temporarily

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <button class="setModeButton" value="darkeningEffect">Set Darkening effect mode</button>
         <button class="setModeButton" value="brighteningEffect">Set Brightening Effect mode</button>
         <button id="eraseGrid">Erase All</button>
-        <button id="paintBucketTool">Paint Bucket Tool</button>
+        <!-- <button id="paintBucketTool">Paint Bucket Tool</button> -->
       </div>
       <div id="gridSettingsContainer">
         <!-- Grid Size -->
@@ -53,6 +53,10 @@
           <label for="gridMeshOpacity">Grid mesh opacity</label>
           <input id="gridMeshOpacity" type="range" value="5">
           <output for="gridMeshOpacity">0.05</output>
+        </div>
+        <div class="set-grid-bgColor-container">
+          <label for="set-grid-bgColor">Set Grid background color</label>
+          <input id="set-grid-bgColor" type="color" value="#ffffff">
         </div>
       </div>
     </div>
